Implement a simple completion provider for `unstable-codegen`